    client.conf. (closes: #370788)
  * Include sample client.conf in libcupsys2. You can copy /usr/share/
    doc/libcupsys2/examples/client.conf to /etc/cups or ~/.cups and modify
    for your environment. (closes: #376840)
  * Split locale files to new package "cupsys-common". (closes: #378659)
    This package is used by cupsys and cupsys-client/cupsys-bsd.

 -- Kenshi Muto <kmuto@debian.org>  Wed, 21 Jun 2006 15:06:02 +0000

cupsys (1.2.1-3) unstable; urgency=low

  [Kenshi Muto]
  * Apply upstream svn change r5673.
    - Remove unnecessary %s from dirsvc.c and will solve a mysterious
      cupsd crash. Thanks Neil. (closes: #372696, #370611)
    - Support again * character as IP address. (closes: #372291)
    - Fixes wrong command line arguments to backend. (closes: #372586, #373839)
  * Improve the wording of NEWS file, thanks Tomas (closes: #372256)
  * 53_usr_share_ppd_support: Use /usr/share/ppd as PPD path.
    (closes: #365300, #373722)
    Make symlink /usr/share/ppd/cups-transitional-dir -> /usr/share/cups/ppd
    for keeping a compatibility. We'll migrate all of PPD files to
    /usr/share/ppd in the future.
  * Revert to use single /etc/cups/cupsd.conf file for the configuration
    instead of using separate files in /etc/cups/cups.d. The migration will
    be done automatically. (closes: #345973, #372727)
  * Apply correct permission modes to the files under /etc/cups at postinst
    stage.
  * Update debconf translations:
    - Danish (closes: #371170)
    - French (closes: #372714) 
    - Italian (closes: #372198)

 -- Kenshi Muto <kmuto@debian.org>  Sun, 11 Jun 2006 11:51:01 +0000

cupsys (1.2.1-2) unstable; urgency=low

  [Kenshi Muto]
  * Provides /etc/cups/ssl directory for SSL. (closes: #370407, #370450)
  * Add an newline after 'Starting ...' message by appending log_end_msg
    to /etc/init.d/cupsys. (closes: #370460)

 -- Kenshi Muto <kmuto@debian.org>  Mon,  5 Jun 2006 22:44:55 +0900

cupsys (1.2.1-1) unstable; urgency=low
