@@ -1,1 +1,4 @@
 # Cups configure options
+
+# LOAD_LP_MODULE: enable/disable to load "lp" parallel printer driver module
+LOAD_LP_MODULE=yes
